--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -60,7 +60,7 @@
    </header>
 
 
-   <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+   <div id="myCarousel" class="carousel slide py-3" data-bs-ride="carousel">
       <div class="carousel-indicators">
          <button hrf type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-label="Slide 1"
             aria-current="true"></button>
@@ -116,11 +116,11 @@
    </div>
 
 
-   <div class="alert text-bg-dark border-radius:0" role="alert">
+   <div class="alert text-bg-dark border-radius:0 py-3" role="alert">
       <h2 class="display-6">Today’s DealsSee all deals</h2>
    </div>
 
-   <div class="container-fluid d-md-flex flex-md-equal justify-content-center">
+   <div class="container-fluid d-md-flex flex-md-equal justify-content-center py-3">
       <div class="card" style="width: 18rem;">
          <img src="./images/laptop5.webp" class="card-img-top" alt="laptop">
          <div class="card-body">
@@ -159,11 +159,11 @@
       </div>
    </div>
 
-   <div class="alert text-bg-dark border-radius:0" role="alert">
+   <div class="alert text-bg-dark border-radius:0 py-3" role="alert">
       <h2 class="display-6">Additional items to explore See more</h2>
    </div>
 
-   <div class="container-fluid">
+   <div class="container-fluid py-3">
       <div class="d-md-flex flex-md-equal justify-content-evenly w-100 my-md-3 ps-md-3">
          <div class="text-bg-dark me-md-3 pt-3 px-3 pt-md-4 px-md-5 text-center overflow-hidden">
             <div class="my-3 py-3">
@@ -201,13 +201,13 @@
       </div>
    </div>
 
-   <div class="alert text-bg-dark border-radius:0" role="alert">
+   <div class="alert text-bg-dark border-radius:0 py-3" role="alert">
       <h2 class="display-7">
          Up to 60% off | Beautiful silk sarees from markets of Tamil Nadu Explore more
       </h2>
    </div>
 
-   <div class="container-fluid d-md-flex flex-md-equal">
+   <div class="container-fluid d-md-flex flex-md-equal py-3">
 
       <div class="card mb-3" style="max-width: 540px;">
          <div class="row g-0">
@@ -219,6 +219,9 @@
                   <h5 class="card-title">KEDARNATH SILK</h5>
                   <p class="card-text">KEDARNATH SILK MILLS women's kanchipuram silk saree with blouse piece
                      (Dn-K51-GREEN-RED)</p>
+               </div>
+               <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                  <div class="text-left"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
                </div>
             </div>
          </div>
@@ -233,6 +236,9 @@
                   <h5 class="card-title">KEDARNATH SILK</h5>
                   <p class="card-text">KEDARNATH SILK MILLS women's kanchipuram silk saree with blouse piece
                      (Dn-K15-NAVYBLUE-ORANGE)</p>
+                  <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                     <div class="text-left"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                  </div>
                </div>
             </div>
          </div>
@@ -246,13 +252,226 @@
                <div class="card-body">
                   <h5 class="card-title">KEDARNATH SILK</h5>
                   <p class="card-text">KEDARNATH SILK MILLS women's kanchipuram silk saree with blouse piece
-                     (Dn-K51-GREEN-RED).</p>
+                     (Dn-K51-GREEN-RED).
+                  </p>
+                  <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                     <div class="text-left"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                  </div>
                </div>
             </div>
          </div>
       </div>
 
    </div>
+
+   <div class="alert text-bg-dark border-radius:0 py-3" role="alert">
+      <h2 class="display-7">
+         Pick up where you left off
+      </h2>
+   </div>
+
+   <section class="py-3">
+      <div class="container px-4 px-lg-5 mt-5">
+         <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+            <div class="col mb-5">
+               <div class="card h-100">
+                  <!-- Product image-->
+                  <img class="card-img-top" src="https://source.unsplash.com/450x300/?Fancy" alt="..." />
+                  <!-- Product details-->
+                  <div class="card-body p-4">
+                     <div class="text-center">
+                        <!-- Product name-->
+                        <h5 class="fw-bolder">Fancy Product</h5>
+                        <!-- Product price-->
+                        $40.00 - $80.00
+                     </div>
+                  </div>
+                  <!-- Product actions-->
+                  <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                     <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>
+                  </div>
+               </div>
+            </div>
+            <div class="col mb-5">
+               <div class="card h-100">
+                  <!-- Sale badge-->
+                  <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
+                  <!-- Product image-->
+                  <img class="card-img-top" src="https://source.unsplash.com/450x300/?special book" alt="..." />
+                  <!-- Product details-->
+                  <div class="card-body p-4">
+                     <div class="text-center">
+                        <!-- Product name-->
+                        <h5 class="fw-bolder">Special Item</h5>
+                        <!-- Product reviews-->
+                        <div class="d-flex justify-content-center small text-warning mb-2">
+                           <div class="bi-star-fill"></div>
+                           <div class="bi-star-fill"></div>
+                           <div class="bi-star-fill"></div>
+                           <div class="bi-star-fill"></div>
+                           <div class="bi-star-fill"></div>
+                        </div>
+                        <!-- Product price-->
+                        <span class="text-muted text-decoration-line-through">$20.00</span>
+                        $18.00
+                     </div>
+                  </div>
+                  <!-- Product actions-->
+                  <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                     <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                  </div>
+               </div>
+            </div>
+            <div class="col mb-5">
+               <div class="card h-100">
+                  <!-- Sale badge-->
+                  <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
+                  <!-- Product image-->
+                  <img class="card-img-top" src="https://source.unsplash.com/450x300/?sale" alt="..." />
+                  <!-- Product details-->
+                  <div class="card-body p-4">
+                     <div class="text-center">
+                        <!-- Product name-->
+                        <h5 class="fw-bolder">Sale Item</h5>
+                        <!-- Product price-->
+                        <span class="text-muted text-decoration-line-through">$50.00</span>
+                        $25.00
+                     </div>
+                  </div>
+                  <!-- Product actions-->
+                  <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                     <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                  </div>
+               </div>
+            </div>
+            <div class="col mb-5">
+               <div class="card h-100">
+                  <!-- Product image-->
+                  <img class="card-img-top" src="https://source.unsplash.com/450x300/?Popular product" alt="..." />
+                  <!-- Product details-->
+                  <div class="card-body p-4">
+                     <div class="text-center">
+                        <!-- Product name-->
+                        <h5 class="fw-bolder">Popular Item</h5>
+                        <!-- Product reviews-->
+                        <div class="d-flex justify-content-center small text-warning mb-2">
+                           <div class="bi-star-fill"></div>
+                           <div class="bi-star-fill"></div>
+                           <div class="bi-star-fill"></div>
+                           <div class="bi-star-fill"></div>
+                           <div class="bi-star-fill"></div>
+                        </div>
+                        <!-- Product price-->
+                        $40.00
+                     </div>
+                  </div>
+                  <!-- Product actions-->
+                  <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                     <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                  </div>
+               </div>
+            </div>
+            <div class="col mb-5">
+               <div class="card h-100">
+                  <!-- Sale badge-->
+                  <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
+                  <!-- Product image-->
+                  <img class="card-img-top" src="https://source.unsplash.com/450x300/?sale item" alt="..." />
+                  <!-- Product details-->
+                  <div class="card-body p-4">
+                     <div class="text-center">
+                        <!-- Product name-->
+                        <h5 class="fw-bolder">Sale Item</h5>
+                        <!-- Product price-->
+                        <span class="text-muted text-decoration-line-through">$50.00</span>
+                        $25.00
+                     </div>
+                  </div>
+                  <!-- Product actions-->
+                  <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                     <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                  </div>
+               </div>
+            </div>
+            <div class="col mb-5">
+               <div class="card h-100">
+                  <!-- Product image-->
+                  <img class="card-img-top" src="https://source.unsplash.com/450x300/?Fancy Product" alt="..." />
+                  <!-- Product details-->
+                  <div class="card-body p-4">
+                     <div class="text-center">
+                        <!-- Product name-->
+                        <h5 class="fw-bolder">Fancy Product</h5>
+                        <!-- Product price-->
+                        $120.00 - $280.00
+                     </div>
+                  </div>
+                  <!-- Product actions-->
+                  <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                     <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>
+                  </div>
+               </div>
+            </div>
+            <div class="col mb-5">
+               <div class="card h-100">
+                  <!-- Sale badge-->
+                  <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
+                  <!-- Product image-->
+                  <img class="card-img-top" src="https://source.unsplash.com/450x300/?Special Phone" alt="..." />
+                  <!-- Product details-->
+                  <div class="card-body p-4">
+                     <div class="text-center">
+                        <!-- Product name-->
+                        <h5 class="fw-bolder">Special Item</h5>
+                        <!-- Product reviews-->
+                        <div class="d-flex justify-content-center small text-warning mb-2">
+                           <div class="bi-star-fill"></div>
+                           <div class="bi-star-fill"></div>
+                           <div class="bi-star-fill"></div>
+                           <div class="bi-star-fill"></div>
+                           <div class="bi-star-fill"></div>
+                        </div>
+                        <!-- Product price-->
+                        <span class="text-muted text-decoration-line-through">$20.00</span>
+                        $18.00
+                     </div>
+                  </div>
+                  <!-- Product actions-->
+                  <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                     <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                  </div>
+               </div>
+            </div>
+            <div class="col mb-5">
+               <div class="card h-100">
+                  <!-- Product image-->
+                  <img class="card-img-top" src="https://source.unsplash.com/450x300/?Popular" alt="..." />
+                  <!-- Product details-->
+                  <div class="card-body p-4">
+                     <div class="text-center">
+                        <!-- Product name-->
+                        <h5 class="fw-bolder">Popular Item</h5>
+                        <!-- Product reviews-->
+                        <div class="d-flex justify-content-center small text-warning mb-2">
+                           <div class="bi-star-fill"></div>
+                           <div class="bi-star-fill"></div>
+                           <div class="bi-star-fill"></div>
+                           <div class="bi-star-fill"></div>
+                           <div class="bi-star-fill"></div>
+                        </div>
+                        <!-- Product price-->
+                        $40.00
+                     </div>
+                  </div>
+                  <!-- Product actions-->
+                  <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                     <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </section>
 
    <div class="container-fluid d-md-flex flex-md-equal justify-content-center  text-center text-light bg-dark">
       <div class="col-md-5 p-sm-5 mx-auto my-5">
