--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -60,7 +60,7 @@
    </header>
 
 
-   <div id="myCarousel" class="carousel slide py-3" data-bs-ride="carousel">
+   <div id="myCarousel" class="carousel top-0 slide py-3" data-bs-ride="carousel">
       <div class="carousel-indicators">
          <button hrf type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-label="Slide 1"
             aria-current="true"></button>
